Create separate deployments for editor & builtwithdark (traffic-serving) pods
This avoids the problem that a request in the editor (say, from a REPL)
to a Dark endpoint (https://,,,/) might, by chance, both get scheduled
on the same pod. Since we have 72 pods, and since Dark execution is
blocking, that means the request will time out, as will the REPL
execution, possibly also killing the pod if the healthcheck can't be
hit.

We're still vulnerable to some forms of this problem - an HTTP handler
calling an HTTP handler still has this possibility - but this greatly
reduces the risk, since "use a REPL to run tests" is an idea we've seen
people come up with on their own.

Note: ops-corpsite requests are served by darklang.com, so _both_ editor
+ "prod" requests will go to the bwd replicaset for that canvas.

This change _also_ creates a routing rule in the bwd-ingress to route
traffic appropriately, adds editor-app to the tunnel whitelist and
honeycomb config, and copies bwd-* network-policy and nodeport for
editor-.

Deploy plan:
- first, manually deploy everything but the bwd-ingress change, and wait
for the new editor- replicaset to come up. This is a no-op for
customers; nothing is routing traffic to editor-.
- manually deploy the bwd-ingress
- check that the editor comes up, and can make a request from a repl to
a bwd endpoint
- if we need to rollback, the only thing to revert & manually deploy is
bwd-ingress; that effects a rollback, and the editor- stuff can be
removed more slowly
- if all is good, merge code to make the change permanent

--- a/scripts/support/kubernetes/builtwithdark/darklang-nodeport.yaml
+++ b/scripts/support/kubernetes/builtwithdark/darklang-nodeport.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: bwd-app
+    app: editor-app
   ports:
     - name: darklang-nodeport-port
       protocol: TCP
